k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
  namespace: devops-demo
spec:
  type: ClusterIP
  selector:
    app: devops-demo
  ports:
  - port: 80
    targetPort: 5000
